# thicket

./: pyproject.toml
thicket_new/: graph.py  graph_old.py  node.py
